--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <!--  <title>To Do List</title> -->
   </head>
   <body>
+    <style> 
+    body {
+      background-color: rgba(17, 16, 16, 0.938);
+    }
+    </style>
     
     <noscript>
       <!--  <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
